fix responsive layout bugs

--- a/style.css
+++ b/style.css
@@ -705,7 +705,7 @@ body {
     }
 }
 
-@media only screen and (orientation: landscape) and (max-height: 1200px) {
+@media only screen and (min-width: 1500px) and (max-height: 1200px) {
     .nav-title {
         font-size: 9rem;
     }
@@ -1350,6 +1350,16 @@ body {
     }
 }
 
+@media only screen and (orientation: landscape) and (max-height: 700px) {
+    .home-button button {
+        display: none;
+    }
+
+    .contact-button button {
+        display: none;
+    }
+}
+
 @media only screen and (max-width: 600px) {
     .divider {
         font-size: .6rem;
@@ -1400,7 +1410,7 @@ body {
     }
 }
 
-@media only screen and (orientation: landscape) and (max-height: 1200px) {
+@media only screen and (min-width: 1551px) and (max-height: 1200px) {
     .divider {
         font-size: 1.3rem;
         letter-spacing: 3px;
@@ -1866,7 +1876,7 @@ body {
     }
 }
 
-@media only screen and (orientation: landscape) and (max-height: 1200px) {
+@media only screen and (min-width: 1550px) and (max-height: 1200px) {
     .works-red-line {
         bottom: 7rem;
         width: 53rem;
@@ -1947,7 +1957,17 @@ body {
     }
 }
 
+@media only screen and (max-width: 1200px) and (max-height: 1030px) {
+    .project-wrapper {
+        gap: 0rem;
+    }
+}
 
+@media only screen and (max-width: 1200px) and (max-height: 700px) {
+    .project-wrapper {
+        gap: 0rem;
+    }
+}
 
 @media only screen and (orientation: landscape) and (max-height: 700px) {
     .works-red-line {
@@ -2206,7 +2226,7 @@ body {
     }
 }
 
-@media only screen and (orientation: landscape) and (max-height: 1200px) {
+@media only screen and (min-width: 1550px) and (max-height: 1200px) {
     .footer-container {
         margin: 20rem 0 10rem;
     }
@@ -2265,6 +2285,8 @@ body {
     .contact-red-line {
         width: 22rem;
         bottom: 2.3rem;
+        height: 5px;
+        left: 0;
     }
 
     .socials-wrapper h3 {
